--- a/tela1.html
+++ b/tela1.html
@@ -157,8 +157,8 @@
         <div class="list-group">
           <a href="../Novo projeto cadastro/alunos.html" class="list-group-item list-group-item-action">Painel de Controle</a>
           <a href="./materias.html" class="list-group-item list-group-item-action">Cursos</a>
-          <a href="../Novo projeto cadastro/calendario.html" class="list-group-item list-group-item-action">Calendário</a>
-          <a href="../Novo projeto cadastro/GradeCurricular.html" class="list-group-item list-group-item-action">Grade Curricular</a>
+          <a href="./calendario.html" class="list-group-item list-group-item-action">Calendário</a>
+          <a href="./GradeCurricular.html" class="list-group-item list-group-item-action">Grade Curricular</a>
         </div>
       </div>
     </div>
