--- a/tela1.html
+++ b/tela1.html
@@ -155,7 +155,7 @@
     <div class="offcanvas-body">
       <div>
         <div class="list-group">
-          <a href="../Novo projeto cadastro/alunos.html" class="list-group-item list-group-item-action">Painel de Controle</a>
+          <a href="./alunos.html" class="list-group-item list-group-item-action">Painel de Controle</a>
           <a href="./materias.html" class="list-group-item list-group-item-action">Cursos</a>
           <a href="./calendario.html" class="list-group-item list-group-item-action">Calendário</a>
           <a href="./GradeCurricular.html" class="list-group-item list-group-item-action">Grade Curricular</a>
