--- a/alunos.html
+++ b/alunos.html
@@ -185,7 +185,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../Novo projeto cadastro/tela1.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./tela1.html">Home <span class="sr-only">(current)</span></a>
             </ul>
         </div>
     </nav>
