--- a/materias.html
+++ b/materias.html
@@ -260,21 +260,21 @@
                 <a href="#" data-pdf="AulaIntrodução à Programação.pdf">Aula</a>
                 <a href="#" onclick="openVideo('videos/aula1.mp4')">Videoaula</a>
                 <a href="#">Biblioteca</a>
-                <a href="../Novo projeto cadastro/quiz.html" onclick="open('Novo projeto cadastro/quiz.html')">Quiz</a>
+                <a href="../Novo projeto cadastro/quiz.html" onclick="open('quiz.html')">Quiz</a>
             </div>
             <a href="#" data-pdf="IntroducaoComputacao.pdf">Lógica de Programação - Prof. Maria</a>
             <div class="subgroup">
                 <a href="#" data-pdf="Aula Lógica de Programação.pdf">Aula</a>
                 <a href="#" onclick="openVideo('videos/aula2.mp4')">Videoaula</a>
                 <a href="#">Biblioteca</a>
-                <a href="../Novo projeto cadastro/quiz.html" onclick="open('Novo projeto cadastro/quiz.html')" >Quiz</a>
+                <a href="./quiz.html" onclick="open('quiz.html')" >Quiz</a>
             </div>
-            <a href="#" data-pdf="IntroducaoComputacao.pdf">Matemática Discreta - Prof. João</a>
+            <a href="#" data-pdf="IntroducaoComputacao.pdf">Hospitalar - Internação - Prof. Luiz</a>
             <div class="subgroup">
-                <a href="#">Aula</a>
-                <a href="#">Videoaula</a>
+                <a href="#" data-pdf="Aula Lógica de Programação.pdf">Aula</a>
+                <a href="#" onclick="openVideo('videos/1 - INTERNANDO O PACIENTE.mp4')">Videoaula</a>
                 <a href="#">Biblioteca</a>
-                <a href="#">Quiz</a>
+                <a href="./quiz.html" onclick="open('quiz.html')" >Quiz</a>
             </div>
             <a href="#" data-pdf="IntroducaoComputacao.pdf">Introdução à Teoria da Computação - Prof. Carlos</a>
             <div class="subgroup">
